--- a/practice.html
+++ b/practice.html
@@ -7,11 +7,11 @@
    </head>
    <body>
    <h1>khtur73.github.io</h1>
-   <h2>large</h2>
-   <h3>medium</h3>
-   <h4>smaller medium</h4>
-   <h5>small</h5>
-   <h6>tiny</h6>
-     <p><font size="20" face="italic" color="Red">Hello</font></p>
+   <h2><font face="italic" color="Red">large</font></h2>
+   <h3><font face="italic" color="Green">medium</font></h3>
+   <h4><font face="italic" color="Red">smaller medium</font></h4>
+   <h5><font face="italic" color="Green">small</font></h5>
+   <h6><font face="italic" color="Red">tiny</font></h6>
+     <p><font size="20" face="italic" color="Green">Hello</font></p>
    </body>
 </html>
