--- a/practice.html
+++ b/practice.html
@@ -13,5 +13,6 @@
    <h5><font face="italic" color="Green">small</font></h5>
    <h6><font face="italic" color="Red">tiny</font></h6>
      <p><font size="20" face="italic" color="Green">Hello</font></p>
+	 <img src="http://pre15.deviantart.net/b666/th/pre/i/2015/106/5/4/skillet___sick_of_it___avatar_by_aleoxthegreat-d7pmm1c.png" width="150" height="100"/>
    </body>
 </html>
