--- a/practice.html
+++ b/practice.html
@@ -3,10 +3,11 @@
 <head>
    <meta charset="utf-8">
    <title>Tracy home page</title>
-   <font size="20" face="italic" color="green">Tracy Stern</font>
+   <font size="40" face="italic" color="Blue">Tracy Stern</font>
+   <body background="images/moon.jpg">
    </head>
    <body>
-   <h1>khtur73.github.io</h1>
+   <h1><font color="White">khtur73.github.io</font></h1>
    <h2><font face="italic" color="Red">large</font></h2>
    <h3><font face="italic" color="Green">medium</font></h3>
    <h4><font face="italic" color="Red">smaller medium</font></h4>
