--- a/bestMovie.html
+++ b/bestMovie.html
@@ -8,7 +8,7 @@
    <body>
      <p><font size="40" face=bold color=blue>Twilight</font></p>
 	 <img src="images/Twilight.jpg" width="400" height="600"/>
-	 <p><font size="20" face=italic color=blue> Why do I love this movie?</font></p>
+	 <p><font size="20" face=italic color=Green> Why do I love this movie?</font></p>
 	 <p><font size="15" face=bold color=blue>I love it because it's funny, scary, romantic and the best movie ever. And I really love vampires.</font></p>
 	 <p><font size="15" face=bold color=blue>Here's the trailer's link:</font></p>
 	 <font size="25" face=bold color=purple><a href="https://www.youtube.com/watch?v=fFLrRlPBg0A">Twilight's movie trailer</a></font>
