--- a/practice.html
+++ b/practice.html
@@ -4,7 +4,7 @@
    <meta charset="utf-8">
    <title>Tracy home page</title>
    <font size="40" face="italic" color="Blue">Tracy Stern</font>
-   <body background="images/moon.jpg">
+   <body background="images/moon.jpg"";background-attachment:fixed"></body>
    </head>
    <body>
    <h1><font color="White">khtur73.github.io</font></h1>
@@ -18,6 +18,7 @@
 	 <p>
 	 <img src="images/skillet-rise-revolution.jpg" width="800" height="450"/>
 	 <font size="40" face="bold" color="White"><a href="https://www.youtube.com/watch?v=AHzU-9iozmo">Skillet music</a></font>
-	 </p>
+	 </p> 
+	 <p>i dont know</p>
    </body>
 </html>
