--- a/dvtab.html
+++ b/dvtab.html
@@ -27,9 +27,6 @@
 	color: Purple;
 	}
 	
-	li {
-	color: Red;
-	}
 	
 	#wrapper {
 	 width: 1100px;
@@ -47,6 +44,38 @@
 	border-bottom:2px solid #7f7f7f;
 	margin-bottom:16px;
 	}
+	
+	#mainHeader div{
+	margin-top:16px;
+	}
+	
+	#mainHeader ul {
+	list-style:none;
+	float: left;
+	}
+	
+	#mainHeader ul li {
+	float: left;
+	}
+	
+	#mainHeader ul li a {
+	font-family: Ariel, Helvetica, anas-serif;
+	font-size:20px;
+	color: #000;
+	padding: 0 20px;
+	border-right: 1px solid #000;
+	text-decoration: none;
+	}
+	
+	#mainHeader ul li a.last {
+	border: none;
+	}
+	
+	#mainHeader ul li a:hover{
+			color: #c00000;
+		}
+	
+	
    </style>
    
    
