--- a/dvtab.html
+++ b/dvtab.html
@@ -9,21 +9,17 @@
    <style>
     body {
 	    background-image:url(https://static.pexels.com/photos/4827/nature-forest-trees-fog.jpeg);background-attachment:fixed;
-		font: 100% Italic, Times, Serif;
+		font: 100% Georgia, Times, Serif;
 		
 	}
 	
 	h1 {
-	  font: 300% Impact, Charcoal, sans-serif;
+	  font: 300% Arial, Helvetica, sans-serif;
 	  color: Red;
 	}
 	
-	h2 {
-	color: Green;
-	}
 	
 	p {
-	font: 100% "Comic Sans MS", cursive, sans-serif;
 	color: Purple;
 	}
 	
@@ -39,9 +35,9 @@
 	#mainHeader {
 	height:185px;
 	background:url(images/logo.png)no-repeat 25px center;
-	padding:75px 0 0 300px;
+	padding: 0 75px 0 300px;
 	position:relative;
-	border-bottom:2px solid #7f7f7f;
+	border-bottom: thick dashed #ff0000;
 	margin-bottom:16px;
 	}
 	
@@ -63,16 +59,17 @@
 	font-size:20px;
 	color: #000;
 	padding: 0 20px;
-	border-right: 1px solid #000;
+	border-right: 1px solid Darkgreen;
 	text-decoration: none;
 	}
+	
 	
 	#mainHeader ul li a.last {
 	border: none;
 	}
 	
 	#mainHeader ul li a:hover{
-			color: #c00000;
+			color: Darkgreen;
 		}
 	
 	
@@ -120,18 +117,16 @@
 	</div> <!--end header -->
 	
 	<!-- Section content-->
-	
 	<div id="Content">
-	<p> replace this text with project and assigments examples</p>
+	       <p> replace this text with project and assigments examples</p>
+	</div> <!-- end Content-->
 	
-	</div> <!-- end content-->
-	
-	<!-- aside-->
+	<!-- Aside-->
 	<div id="hobbies">
 	<p> place things you like here;
 	photos, links, videos, etc. </p>
 	
-	</div> <!-- end aside-->
+	</div> <!-- end Hobbies-->
 	
 	<!-- Footer content-->
 	<div id="pageFooter">
