--- a/final.html
+++ b/final.html
@@ -4,7 +4,7 @@
 
 <head>
    <meta charset="utf-8">
-   <title>Div Tag Template</title>
+   <title>final page</title>
    <link href="main.css" rel="stylesheet" type="text/css">
 
    
@@ -30,7 +30,7 @@
 			  <a href="scratch.html">scratch</a>
 			  </li>
 			  <li>
-			  <a href="paython.html">Paython</a>
+			  <a href="python.html">Python</a>
 			  </li>
 			  <li>
 			  <a href="java.html">Java</a>
@@ -50,6 +50,7 @@
 	
 	<!-- Section content-->
 	<section id="Content">
+			<h2> final content </h2>
 	       <p> replace this text with project and assigments examples</p>
 	</section> <!-- end Content-->
 	
