icons and staff

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
    <meta charset="utf-8">
    <title>index page</title>
-   <link href="main.css" rel="stylesheet" type="text/css">
+   <link href="main3.css" rel="stylesheet" type="text/css">
 
    
 </head>
@@ -51,19 +51,18 @@
 	<!-- Section content-->
 	<section id="Content">
 			<h2> index content </h2>
-	       <p> replace this text with project and assigments examples</p>
+	       <p> I like to play on my phone and to text to my friends in Israel and to sleep</p>
 	</section> <!-- end Content-->
 	
 	<!-- Aside Content-->
 	<aside id="hobbies">
-	<p> place things you like here;
-	photos, links, videos, etc. </p>
+	<p> My favorite place is Israel </p>
 	
 	</aside> <!-- end Hobbies-->
 	
 	<!-- Footer Content-->
 	<footer id="pageFooter">
-	<p> auther, contact info, copyright </p>
+	<p> Tracy Stern, 858-257-****, DON'T COPY, YOU! </p>
 	</footer> <!--end Footer-->
 	
   </div> <!--end wrapper -->
