--- a/table.html
+++ b/table.html
@@ -7,9 +7,19 @@
    <title>table</title>
    <body style="background-image:url(https://static.pexels.com/photos/4827/nature-forest-trees-fog.jpeg);background-attachment:fixed"></body>
 </head>
+<head>
+<style>
+#div1 {
+    width: 350px;
+    height: 70px;
+    padding: 10px;
+    border: 1px solid #aaaaaa;
+}
+</style>
+</head>
 
 <body>
-  
+
     <!--main table --> 
 	<table border="1" width="100%">
 	 <!--raw 1 -->
