--- a/template.html
+++ b/template.html
@@ -50,19 +50,18 @@
 	
 	<!-- Section content-->
 	<section id="Content">
-	       <p> replace this text with project and assigments examples</p>
+	       <p> Hi. this is my website. So, enjoy... I guess.</p>
 	</section> <!-- end Content-->
 	
 	<!-- Aside Content-->
 	<aside id="hobbies">
-	<p> place things you like here;
-	photos, links, videos, etc. </p>
+	<p> "when you put something in quotation marks, people will think it's a famouse quote" me, now. </p>
 	
 	</aside> <!-- end Hobbies-->
 	
 	<!-- Footer Content-->
 	<footer id="pageFooter">
-	<p> auther, contact info, copyright </p>
+	<p> Tracy Stern, 858-257-****, DON'T COPY, YOU!  </p>
 	</footer> <!--end Footer-->
 	
   </div> <!--end wrapper -->
