--- a/java.html
+++ b/java.html
@@ -5,7 +5,7 @@
 <head>
    <meta charset="utf-8">
    <title>java page</title>
-   <link href="main.css" rel="stylesheet" type="text/css">
+   <link href="main5.css" rel="stylesheet" type="text/css">
 
    
 </head>
