--- a/python.html
+++ b/python.html
@@ -5,7 +5,7 @@
 <head>
    <meta charset="utf-8">
    <title>python page</title>
-   <link href="main.css" rel="stylesheet" type="text/css">
+   <link href="main4.css" rel="stylesheet" type="text/css">
 
    
 </head>
