--- a/scratch.html
+++ b/scratch.html
@@ -107,7 +107,7 @@ I did 2 final projects.</p>
 	
 	<!-- Footer Content-->
 	<footer id="pageFooter">
-	<p> auther, contact info, copyright </p>
+	<p> Tracy Stern, 858-257-****, DON'T COPY, YOU!  </p>
 	</footer> <!--end Footer-->
 	
   </div> <!--end wrapper -->
