--- a/final.html
+++ b/final.html
@@ -41,6 +41,8 @@
 			  <li>
 			  <a href="index.html">Home</a>
 			  </li>
+			  <a href="jeroo.html">Jeroo</a>
+			  </li>
 		
 		  </ul>
 		
@@ -63,7 +65,7 @@
 	
 	<!-- Footer Content-->
 	<footer id="pageFooter">
-	<p> auther, contact info, copyright </p>
+	<p> Tracy Stern, 858-257-****, DON'T COPY, YOU! </p>
 	</footer> <!--end Footer-->
 	
   </div> <!--end wrapper -->
