--- a/jeroo.html
+++ b/jeroo.html
@@ -4,10 +4,8 @@
 
 <head>
    <meta charset="utf-8">
-   <title>python page</title>
-   <link href="main4.css" rel="stylesheet" type="text/css">
-
-   
+   <title>jeroo page</title>
+   <link href="main6.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -52,8 +50,8 @@
 	
 	<!-- Section content-->
 	<section id="Content">
-			<h2> python content </h2>
-	       <p> replace this text with project and assigments examples</p>
+			<h2> Jeroo content </h2>
+	       <p>put jeroo content here</p>
 	</section> <!-- end Content-->
 	
 	<!-- Aside Content-->
@@ -65,7 +63,7 @@
 	
 	<!-- Footer Content-->
 	<footer id="pageFooter">
-	<p> Tracy Stern, 858-257-****, DON'T COPY, YOU!</p>
+	<p> Tracy Stern, 858-257-****, DON'T COPY, YOU! </p>
 	</footer> <!--end Footer-->
 	
   </div> <!--end wrapper -->
