--- a/template.html
+++ b/template.html
@@ -41,6 +41,8 @@
 			  <li>
 			  <a href="index.html">Home</a>
 			  </li>
+			  <a href="jeroo.html">Jeroo</a>
+			  </li>
 		
 		  </ul>
 		
@@ -55,7 +57,7 @@
 	
 	<!-- Aside Content-->
 	<aside id="hobbies">
-	<p> "when you put something in quotation marks, people will think it's a famouse quote" me, now. </p>
+	<p> "when you put something into quotation marks, people will think it's a famouse quote" me, now. </p>
 	
 	</aside> <!-- end Hobbies-->
 	
