--- a/jeroo.html
+++ b/jeroo.html
@@ -39,8 +39,9 @@
 			  <li>
 			  <a href="index.html">Home</a>
 			  </li>
-			  <a href="jeroo.html">Jeroo</a>
+			  <li><a href="jeroo.html">Jeroo</a>
 			  </li>
+			     
 		
 		  </ul>
 		
