--- a/python.html
+++ b/python.html
@@ -41,7 +41,7 @@
 			  <li>
 			  <a href="index.html">Home</a>
 			  </li>
-			  <a href="jeroo.html">Jeroo</a>
+			  <li><a href="jeroo.html">Jeroo</a>
 			  </li>
 		
 		  </ul>
