--- a/template.html
+++ b/template.html
@@ -50,16 +50,21 @@
 		
 	</header> <!--end header -->
 	
+
+	<!-- Aside Content-->
+	<aside id="hobbies">
+	<p> "when you put something into quotation marks, people will think it's a famouse quote" me, now. </p>
+	<p> My favorite band is skillet. Here are some songs: </p>
+	<p><iframe width="560" height="315" src="https://www.youtube.com/embed/AHzU-9iozmo" frameborder="0" allowfullscreen></iframe></p>
+	<p><iframe width="560" height="315" src="https://www.youtube.com/embed/1mjlM_RnsVE" frameborder="0" allowfullscreen></iframe></p>
+	
+	</aside> <!-- end Hobbies-->
 	<!-- Section content-->
 	<section id="Content">
 	       <p> Hi. this is my website. So, enjoy... I guess.</p>
 	</section> <!-- end Content-->
 	
-	<!-- Aside Content-->
-	<aside id="hobbies">
-	<p> "when you put something into quotation marks, people will think it's a famouse quote" me, now. </p>
-	
-	</aside> <!-- end Hobbies-->
+		
 	
 	<!-- Footer Content-->
 	<footer id="pageFooter">
