--- a/index.html
+++ b/index.html
@@ -54,11 +54,14 @@
 	<section id="Content">
 			<h2> index content </h2>
 	       <p> I like to play on my phone and to text to my friends in Israel and to sleep</p>
+		   <p> My favorite band is Skillet. Here are two songs: <p>
+		   <p><iframe width="560" height="315" src="https://www.youtube.com/embed/AHzU-9iozmo" frameborder="0" allowfullscreen></iframe></p>
+	<p><iframe width="560" height="315" src="https://www.youtube.com/embed/1mjlM_RnsVE" frameborder="0" allowfullscreen></iframe></p>
 	</section> <!-- end Content-->
 	
 	<!-- Aside Content-->
 	<aside id="hobbies">
-	<p> My favorite place is Israel </p>
+	<p> My favorite place is Israel, I miss there because all my friends are there.</p>
 	
 	</aside> <!-- end Hobbies-->
 	
