Jeroo page html

--- a/jeroo.html
+++ b/jeroo.html
@@ -52,13 +52,75 @@
 	<!-- Section content-->
 	<section id="Content">
 			<h2> Jeroo content </h2>
-	       <p>put jeroo content here</p>
+	       <p> __________________U N I T ___ 1______________________ </p>
+	       <p> <image src="images/Unit1.png"> </p>
+		   <h2>Description: </h2>
+		   <p> We used Jeroo to Create a Diamond Shape.</p>
+           <h3> Concepts Learned: </h3>
+		   <p> <li>Using hop, plant and methods. We also "told" the Jeroo were to start (location) and which direction it should go.</li>  
+		   <li>Using directions, like Right and Left.</li>  
+		   </p>
+		   <p> </p>
+		   <p> <image src="images/Unit1t.png"> </p>
+		   <h2> Description: </h2>
+		   <p> We used Jeroo to run and pick flowers and counteract the nets.</p>
+           <h3> Concepts Learned: </h3>
+		   <p> <li>counteract nets with "toss" command.</li> 
+		   <li>we used "hop".</li> 
+		   <li>We make the Jeroo pick the flowers</li> 
+		   </p>
+		   <p> _____________________U N I T ___ 2_____________________________ </p>
+		   <p> <image src="images/Unit2.png"> </p>
+		     <h2> Description: </h2>
+		   <p> We used Jeroo to create our 3 last digits of our phone number.</p>
+           <h3> Concepts Learned: </h3>
+		   <p> <li>We used a lot of directions.</li> 
+		   <li>We used hop and "plant"(put Flower) command.</li> 
+		   </p>
+		   <p>  </p>
+		   <p> <image src="images/Unit2t.png"> </p>
+		     <h2> Description: </h2>
+		   <p> We Made 4 Jeroos solve the maze and pick the flower in the end of the maze.</p>
+           <h3> Concepts Learned: </h3>
+		   <p> <li>For the first time, we created more than just 1 Jeroo.</li> 
+		   <li>we used "if" command</li> 
+		   <li>we used "toss".</li> 
+		   </p>
+		   <p> ____________________U N I T ___  3__________________________ </p>
+		   <p> <image src="images/Unit3.png"> </p>
+		     <h2> Description: </h2>
+		   <p> We made the Jeroo solve the maze by "if" and "while" commands.</p>
+           <h3> Concepts Learned: </h3>
+		   <p> <li>we used "if(isWater(AHEAD))" command, that tell the Jeroo what to do if there's water infront of it.</li> 
+		   <li>we used "while(isClear(AHEAD))" command that tells the Jeroo what to do if its clear ahead.</li> 
+		   <li>while is different from if becouse "if" means do it one time. "while" means that we do it untill the law is not true anymore(this case- if its not clear anymore).</li>
+		   </p>
+		   <p> </p>
+		   <p> <image src="images/Unit3t.png"> </p>
+		     <h2> Description: </h2>
+		   <p> We used the Jeroo make a squere, but we used loops this time.</p>
+           <h3> Concepts Learned: </h3>
+		   <p> <li>we used the while command. We told the Jeroo that while its clear ahead he needs to jump one space ahead.</li> 
+		   <li>we used the command "if" and we told the Jeroo that if water is ahead it needs to turn Right.</li> 
+		   </p>
+		   <p> __________________U N I T ___ 4__________________________ </p>
+		   <p> <image src="images/Unit4.png"> </p>
+		     <h2> Description: </h2>
+		   <p> We made Jeroo solve a maze</p>
+		   </p>
+		   <p> </p>
+		   <p> <image src="images/Unit4t.png"> </p>
+		     <h2> Description: </h2>
+		   <p> Jeroo ran through ally and when he saw flowers he picked them and when he saw nets he used "toss".</p>
+           <h3> Concepts Learned: </h3>
+		   <p> <li>We used loops</li> 
+		   <li>we made the method to call itself (Recursion).</li> 
+		   </p>
 	</section> <!-- end Content-->
 	
 	<!-- Aside Content-->
 	<aside id="hobbies">
-	<p> place things you like here;
-	photos, links, videos, etc. </p>
+	<p> Tracy Stern</p>
 	
 	</aside> <!-- end Hobbies-->
 	
