--- a/scratch.html
+++ b/scratch.html
@@ -103,7 +103,7 @@ I did 2 final projects.</p>
 	
 	<!-- Aside Content-->
 	<aside id="hobbies">
-	<p></p>
+	<p>      <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/119673352/?autostart=false" frameborder="0" allowfullscreen></iframe></p>
 	
 	</aside> <!-- end Hobbies-->
 	
