--- a/scratch.html
+++ b/scratch.html
@@ -5,7 +5,7 @@
 <head>
    <meta charset="utf-8">
    <title>scratch page</title>
-   <link href="main2.css" rel="stylesheet" type="text/css">
+   <link href="mains.css" rel="stylesheet" type="text/css">
 
    
 </head>
