--- a/JerooProjecthelp.html
+++ b/JerooProjecthelp.html
@@ -50,7 +50,7 @@
 		   <li>Use "While" command.</li>  
 		   </p>
 		   <p> Start by make the Jeroo fill the outer square:</p>
-		   <p> <image src="images/jerooh.png"> </p>
+		   <p> <image src="images/Jerooh.png"> </p>
 		 
 		   
 	</section> <!-- end Content-->
