--- a/JerooProject.html
+++ b/JerooProject.html
@@ -46,10 +46,10 @@
 	<section id="Content">
 			<h2> Jeroo project problem inf </h2>
 	       <p> Starting screen </p>
-	       <p> <image src="images/Jeroops.png"> </p>
+	       <p> <image src="images/proops.png"> </p>
 		 
 	       <p> Ending screen </p>
-	       <p> <image src="images/Jeroope.png"> </p>
+	       <p> <image src="images/peroope.png"> </p>
 		   <h2>Problem description: </h2>
 		   <p> Use the Jeroo to fill the space with flowers, without step on flowers, and make it to the middle when the screen full with flowers.</p>
 		   <p>*Jeroo CAN'T step on flowers. The only flower it can step on is the flower that it puts in the middle at the end. He also can step on flower when it puts the flower.</p>
