--- a/JerooProjects.html
+++ b/JerooProjects.html
@@ -46,7 +46,7 @@
 	<section id="Content">
 			<h2> Solution: </h2>
 	       <p>You need to make the Jeroo fill the outer square, then the inside square, and so on.</p>
-	       <p> <image src="images/Jerooh.png"> </p>
+	       <p> <image src="images/perooh.png"> </p>
 		   <p> <image src="images/jeroos.png"> </p>
 		   <p> <image src="images/jerooq.png"> </p>
 		   <p> Here's directions step by step what U need to do:</p>
