--- a/JerooProjects.html
+++ b/JerooProjects.html
@@ -17,8 +17,8 @@
 	
 	<header id="mainHeader">
 	
-	    <h1> Exploring computer science</h1>
-	    <h2> My collection of programming projects and assighments</h2>
+	  <h1> Jeroo project problem</h1>
+	    <h2>By: Tracy Stern</h2>
 		
 	    <!-- site Navigation links -->
 		
