--- a/JerooProject.html
+++ b/JerooProject.html
@@ -45,6 +45,7 @@
 	<!-- Section content-->
 	<section id="Content">
 			<h2> Jeroo project problem inf </h2>
+           <p>Open "tracysternlab" file.</p>
 	       <p> Starting screen </p>
 	       <p> <image src="images/proops.png"> </p>
 		 
