--- a/JerooProjects.html
+++ b/JerooProjects.html
@@ -57,6 +57,7 @@
 		   <li>Use "if(isWater(AHEAD))" inside the while command after the isclear command. then put inside "turn(RIGHT)". When the Jeroo sees water in front of it (once) it will turn right.</li>  
 		   <li>Use "if(isFlower(AHEAD))" inside the while command after the if isfacing water command. then put inside "turn(RIGHT)". When the Jeroo sees flower in front of it, it will turn right. </li>
 		   </p>
+		   <p> open "tracysternlabsolution"<p>
 		   <p> That's it :) </p>
 		  
 	</section> <!-- end Content-->
