--- a/python.html
+++ b/python.html
@@ -53,7 +53,66 @@
 	<!-- Section content-->
 	<section id="Content">
 			<h2> python content </h2>
-	       <p> replace this text with project and assigments examples</p>
+	       <h1> ______________U N I T __ 1______________ </h1>
+		   <h2> -------lab # 1---------</h2>
+	       <p> <image src="images/Unit1py.png"> </p>
+		   <p> <image src="images/Unit1py2.png"> </p>
+		   <h2>Description: </h2>
+		   <p> We used phyton to Create math problems solver.</p>
+           <h3> Concepts Learned: </h3>
+		   <p> <li> we used + - = * to make it do a mathematic problems.</li>  
+		   <li>we used str() and int() so it could know that this is a number.</li>
+		   <li> we used a lot of inputs</li>
+		   </p>
+		   <p> </p>
+		   <h2> ------lab # 2-------- </h2>
+		   <p> <image src="images/Unit2py.png"> </p>
+		   <h2> Description: </h2>
+		   <p> We used phyton to make a "magic trick".</p>
+           <h3> Concepts Learned: </h3>
+		   <p> <li>we used "import", that means that the lab file will take information from another file too.</li> 
+		   <li>we used inputs again.</li> 
+		   <li>we used commands to tell the file what to do with the input number.</li> 
+		   <h2> ------lab # 3-------- </h2>
+		   <p> <image src="images/Unit1py3.png"> </p>
+		   <h2> Description: </h2>
+		   <p> We used phyton to make a guy move on screen when the keyboard pressed.</p>
+           <h3> Concepts Learned: </h3>
+		   <p> <li>We created a class called "Person".</li> 
+		   <li>In the class, we told the person that it has x and y (place on screen).</li> 
+		   <li>We used used import to let the runner file know that there's a class called person in Person file.</li> 
+		   <li> we draw a screen( pygame.init() ,screen = pygame.display.set_mode((1000,600)) ), and put the person in it guy= person(50,50).</li>
+		   <li> in the (50,50), it's means the place it will be on screen, 50 y 50 x.</li>
+		   <li> we told it that when one of the arrows (for example- right arrow), it will move to the right.</li>
+		   </p>
+		   <h1> ______________U N I T ___ 2_______________ </h1>
+		   <h2> ------- lab # 1 ------- </h2>
+		   <p> <image src="images/Unit1py3.png"> </p>
+		     <h2> Description: </h2>
+		   <p>We created a person that can move on screen, but it cant get out of the screen.</p>
+           <h3> Concepts Learned: </h3>
+		   <p> <li>We used import.</li> 
+		   <li>When we created the guy's movement, we tolf it that it can move just if the x and y are in the screen.</li> 
+		   <h2> -------lab # 2---------</h2>
+		   <p> <image src="images/Unit2py1.png"> </p>
+		     <h2> Description: </h2>
+		   <p>We created a person that can move on screen, but it cant touch the block.</p>
+           <h3> Concepts Learned: </h3>
+		   <p> <li>we used the "colide" method, that tells the file when the person and the wall colides.</li> 
+		   <li>We used import, because we had a lab runner file ( creating the screen),and a preson file (creating the person).</li> 
+		   </p>
+		   <h2> -------lab # 3---------</h2>
+		   <p> <image src="images/Unit2py3.png"> </p>
+		     <h2> Description: </h2>
+		   <p>We created a game. Person run, if he get coin , added 3 point. If it touches wall, game ended. If it touch red coin, 5 points will be substract.</p>
+           <h3> Concepts Learned: </h3>
+		   <p> <li>we used the "colide" method (for the colliding of wall-person/coin-person/red coin-person).</li> 
+		   <li>We used import (we add a lot of files- coin, brick, person, line runner).</li> 
+		   <li>We make the guy "jump".</li>
+		   <li>we made the wall, coin and red coin move towards the guy.</li>
+		   <li>we made "score".</li>
+		   <li>The speed of the wall will be faster each time it passes the person and goes back to the beggining.</li>
+		   </p>
 	</section> <!-- end Content-->
 	
 	<!-- Aside Content-->
