--- a/python.html
+++ b/python.html
@@ -55,8 +55,8 @@
 			<h2> python content </h2>
 	       <h1> ______________U N I T __ 1______________ </h1>
 		   <h2> -------lab # 1---------</h2>
-	       <p> <image src="images/Unit1py.png"> </p>
-		   <p> <image src="images/Unit1py2.png"> </p>
+	       <p> <img src="images/Unit1py.png"> </p>
+		   <p> <img src="images/Unit1py2.png"> </p>
 		   <h2>Description: </h2>
 		   <p> We used phyton to Create math problems solver.</p>
            <h3> Concepts Learned: </h3>
@@ -66,7 +66,7 @@
 		   </p>
 		   <p> </p>
 		   <h2> ------lab # 2-------- </h2>
-		   <p> <image src="images/Unit2py.png"> </p>
+		   <p> <img src="images/Unit2py.png"> </p>
 		   <h2> Description: </h2>
 		   <p> We used phyton to make a "magic trick".</p>
            <h3> Concepts Learned: </h3>
@@ -74,7 +74,7 @@
 		   <li>we used inputs again.</li> 
 		   <li>we used commands to tell the file what to do with the input number.</li> 
 		   <h2> ------lab # 3-------- </h2>
-		   <p> <image src="images/Unit1py3.png"> </p>
+		   <p> <img src="images/Unit1py3.png"> </p>
 		   <h2> Description: </h2>
 		   <p> We used phyton to make a guy move on screen when the keyboard pressed.</p>
            <h3> Concepts Learned: </h3>
@@ -87,14 +87,14 @@
 		   </p>
 		   <h1> ______________U N I T ___ 2_______________ </h1>
 		   <h2> ------- lab # 1 ------- </h2>
-		   <p> <image src="images/Unit1py3.png"> </p>
+		   <p> <img src="images/Unit1py3.png"> </p>
 		     <h2> Description: </h2>
 		   <p>We created a person that can move on screen, but it cant get out of the screen.</p>
            <h3> Concepts Learned: </h3>
 		   <p> <li>We used import.</li> 
 		   <li>When we created the guy's movement, we tolf it that it can move just if the x and y are in the screen.</li> 
 		   <h2> -------lab # 2---------</h2>
-		   <p> <image src="images/Unit2py1.png"> </p>
+		   <p> <img src="images/Unit2py1.png"> </p>
 		     <h2> Description: </h2>
 		   <p>We created a person that can move on screen, but it cant touch the block.</p>
            <h3> Concepts Learned: </h3>
@@ -102,7 +102,7 @@
 		   <li>We used import, because we had a lab runner file ( creating the screen),and a preson file (creating the person).</li> 
 		   </p>
 		   <h2> -------lab # 3---------</h2>
-		   <p> <image src="images/Unit2py3.png"> </p>
+		   <p> <img src="images/Unit2py3.png"> </p>
 		     <h2> Description: </h2>
 		   <p>We created a game. Person run, if he get coin , added 3 point. If it touches wall, game ended. If it touch red coin, 5 points will be substract.</p>
            <h3> Concepts Learned: </h3>
