--- a/python.html
+++ b/python.html
@@ -113,6 +113,18 @@
 		   <li>we made "score".</li>
 		   <li>The speed of the wall will be faster each time it passes the person and goes back to the beggining.</li>
 		   </p>
+		   <h1> ______________U N I T ___ 3_______________ </h1>
+		   <h2> -------lab---------</h2>
+		   <p> <img src="images/unit33.png"> </p>
+		     <h2> Description: </h2>
+		   <p>We created a game. The coin appeare in random places, each time the guy touches it the score goes up and the coin go to another random place. You have 40 secondes to collect 20 coins. If you make it, it will tell you that you are "winner" and press 3 to start again. if you lose it will tell you "you lost" and press 2 to try again.</p>
+           <h3> Concepts Learned: </h3>
+		   <p> <li>we used the "colide" method (for the colliding of coin-person).</li> 
+		   <li>We used import (we add a lot of files- coin, brick, person, line runner).</li> 
+		   <li>After the guy collide with point, we used random x and random y that the coin will appear there.</li>
+		   <li>We created a timer, that will keep track of time and will set the gameEnd if the time is up.</li>
+		   <li>we made "score" (when the guy collide with the coin.</li>
+		   <li>I made something that will keep track of number of coins that the person collect. After you collect the whole 20 coins you win.</li>
 	</section> <!-- end Content-->
 	
 	<!-- Aside Content-->
