--- a/python.html
+++ b/python.html
@@ -125,12 +125,22 @@
 		   <li>We created a timer, that will keep track of time and will set the gameEnd if the time is up.</li>
 		   <li>we made "score" (when the guy collide with the coin.</li>
 		   <li>I made something that will keep track of number of coins that the person collect. After you collect the whole 20 coins you win.</li>
+		   <h1> ______________U N I T ___ 4_______________ </h1>
+		   <h2> -------lab---------</h2>
+		   <p> <img src="images/unit444444.png"> </p>
+		     <h2> Description: </h2>
+		   <p>We created a game. The guy appeare in the upper screen. There are "aliens" that when the guy touches it the game end. If the guy can move past the aliens so it wins the game.</p>
+           <h3> Concepts Learned: </h3>
+		   <p> <li>we used the "colide" method (for the colliding of alien-person).</li> 
+		   <li>We used import (Person, enemy, enemies).</li> 
+		   <li>After the guy collide with enemy, wThe game end.</li>
+		   <li>We created something that will keep track of number of aliens on the screen.</li>
+		   <li>We created list of 5 enemies that will appear each time its touches the wall.</li>
 	</section> <!-- end Content-->
 	
 	<!-- Aside Content-->
 	<aside id="hobbies">
-	<p> place things you like here;
-	photos, links, videos, etc. </p>
+	<p> PYTHON </p>
 	
 	</aside> <!-- end Hobbies-->
 	
