--- a/python.html
+++ b/python.html
@@ -136,6 +136,13 @@
 		   <li>After the guy collide with enemy, wThe game end.</li>
 		   <li>We created something that will keep track of number of aliens on the screen.</li>
 		   <li>We created list of 5 enemies that will appear each time its touches the wall.</li>
+		   <h1> ______________Project_______________ </h1>
+		   <p> <img src="images/projectP1.png"> </p>
+		     <h2> Description: </h2>
+		   <p>I created a game where you need to avoid sharks and collect coins. You use keys to move.</p>
+		   <p> <img src="images/projectP2.png"> </p>
+		   <p> <img src="images/projectP3.png"> </p>
+           
 	</section> <!-- end Content-->
 	
 	<!-- Aside Content-->
