--- a/template.html
+++ b/template.html
@@ -30,7 +30,7 @@
 			  <a href="scratch.html">scratch</a>
 			  </li>
 			  <li>
-			  <a href="paython.html">Paython</a>
+			  <a href="python.html">Paython</a>
 			  </li>
 			  <li>
 			  <a href="java.html">Java</a>
