--- a/template.html
+++ b/template.html
@@ -57,6 +57,9 @@
 	<p> My favorite band is skillet. Here are some songs: </p>
 	<p><iframe width="560" height="315" src="https://www.youtube.com/embed/AHzU-9iozmo" frameborder="0" allowfullscreen></iframe></p>
 	<p><iframe width="560" height="315" src="https://www.youtube.com/embed/1mjlM_RnsVE" frameborder="0" allowfullscreen></iframe></p>
+	<h2>Another bands:</h2>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/LAMiX5EEbFU" frameborder="0" allowfullscreen></iframe>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/xqds0B_meys" frameborder="0" allowfullscreen></iframe>
 	
 	</aside> <!-- end Hobbies-->
 	<!-- Section content-->
