--- a/python.html
+++ b/python.html
@@ -140,6 +140,12 @@
 		   <p> <img src="images/projectP1.png"> </p>
 		     <h2> Description: </h2>
 		   <p>I created a game where you need to avoid sharks and collect coins. You use keys to move.</p>
+		   <h3> Concepts Learned: </h3>
+		   <p> <li>we used the "colide" method (for the colliding of shark-person and coin-person).</li> 
+		   <li>We used import (Person, enemy, enemies).</li> 
+		   <li>We used lists for creating sprites for the person and for controlling the sharks.</li>
+		   <li>I created couple screens for this, and a "dialog"</li>
+		   <li>I added time and score and the guy is slowly moving and sinking because its underwater.</li>
 		   <p> <img src="images/projectP2.png"> </p>
 		   <p> <img src="images/projectP3.png"> </p>
            
