--- a/java.html
+++ b/java.html
@@ -52,8 +52,18 @@
 	
 	<!-- Section content-->
 	<section id="Content">
-			<h2> java content </h2>
-	       <p> replace this text with project and assigments examples</p>
+			<h2> Java content </h2>
+	       <h1> ______________U N I T __ 1______________ </h1>
+		   <h2> The story</h2>
+	       <p> <img src="images/javau1.png"> </p>
+		   <p> <img src="images/javau12.png"> </p>
+		   <h2>Description: </h2>
+		   <p> I created a story that have more then 5 different endings, and you choose what to do/ where to go.</p>
+           <h3> Concepts Learned: </h3>
+		   <p> <li> We used a LOT of inputs and outputs.</li>  
+		   <li>We used "next" to get the 'answer' for what to do and how to continue the story.</li>
+		   <li></li>
+		   </p>
 	</section> <!-- end Content-->
 	
 	<!-- Aside Content-->
