--- a/java.html
+++ b/java.html
@@ -54,7 +54,16 @@
 	<section id="Content">
 			<h2> Java content </h2>
 	       <h1> ______________U N I T __ 1______________ </h1>
-		   <h2> The story</h2>
+		   <h2> lab 1</h2>
+	       <p> <img src="images/staffin.png"> </p>
+		   <h2>Description: </h2>
+		   <p> we used logic to print staff.</p>
+           <h3> Concepts Learned: </h3>
+		   <p> <li> we used the print method a lot</li>  
+		   <li>We used logic to know what to print and where>
+		   <li></li>
+		   </p>
+		   <h1> _____________The__story_____________</h1>
 	       <p> <img src="images/javau1.png"> </p>
 		   <p> <img src="images/javau12.png"> </p>
 		   <h2>Description: </h2>
