--- a/java.html
+++ b/java.html
@@ -57,11 +57,10 @@
 		   <h2> lab 1</h2>
 	       <p> <img src="images/staffin.png"> </p>
 		   <h2>Description: </h2>
-		   <p> we used logic to print staff.</p>
+		   <p> we used logic to print staff. we needed to make Java print cupple + and inside to print Ravens.</p>
            <h3> Concepts Learned: </h3>
 		   <p> <li> we used the print method a lot</li>  
-		   <li>We used logic to know what to print and where>
-		   <li></li>
+		   <li>We used logic to know what to print and where</li>
 		   </p>
 		   <h1> _____________The__story_____________</h1>
 	       <p> <img src="images/javau1.png"> </p>
