more and more changes in Java

--- a/java.html
+++ b/java.html
@@ -76,8 +76,7 @@
 	
 	<!-- Aside Content-->
 	<aside id="hobbies">
-	<p> place things you like here;
-	photos, links, videos, etc. </p>
+	<p> BAM! WAT?</p>
 	
 	</aside> <!-- end Hobbies-->
 	
